se agregaron ejemplos al repositorio jQuery

--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <stript src="jquery-3.1.1.js"></stript>
+    <script src="jquery-3.1.1.js"></script>
+    <script src="holajquery.js"></script>
 </head>
 <body>
-    <h1>hola Query</h1>
+    <h1>hola jQuery</h1>
     <p>oarrafo 1</p>
 
-    <h1>hola Query</h1>
+    <h2>hola jQuery</h2>
     <p>oarrafo 2</p>
 
-    <h1>hola Query</h1>
+    <h3>hola jQuery</h3>
     <p>oarrafo 3</p>
 
-    <h1>hola Query</h1>
+    <h4>hola Query</h4>
     <p>oarrafo 4</p>
-
-    <script>
-    jQuery('*:last').text('hola')
-    </script>
-    
 </body>
 </html>
