--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1>hola jQuery</h1>
-    <p>oarrafo 1</p>
+    <p>parrafo 1</p>
 
     <h2>hola jQuery</h2>
-    <p>oarrafo 2</p>
+    <p>parrafo 2</p>
 
     <h3>hola jQuery</h3>
-    <p>oarrafo 3</p>
+    <p>parrafo 3</p>
 
     <h4>hola Query</h4>
-    <p>oarrafo 4</p>
+    <p>parrafo 4</p>
 </body>
 </html>
