--- a/index.html
+++ b/index.html
@@ -9,14 +9,44 @@
 <body>
     <h1>hola jQuery</h1>
     <p>parrafo 1</p>
+    <button class='boton'>boton 1</button>
 
     <h2>hola jQuery</h2>
     <p>parrafo 2</p>
+    <button class='boton'>boton 2</button>
 
     <h3>hola jQuery</h3>
     <p>parrafo 3</p>
+    <button class='boton'>boton 3</button>
 
     <h4>hola Query</h4>
     <p>parrafo 4</p>
+    <button class='boton'>boton 4</button>
+    <script>
+
+        /*$(function(){
+            $('#boton1').click(function(){
+                alert('hola '+ $(this).text())
+            })
+        })*/
+
+       /* $(function(){
+            $('.boton').on('click', function(){
+                alert('Hola '+$(this).text())
+            })
+        })*/
+        //este no funciona, revisar
+        $('.boton').on('click','boton'{
+            propiedad1: 'valor1',
+            propiedad2:'valor2'
+        }, function(e){
+            alert(e.data.propiedad1);
+        })
+        })
+
+
+    </script>
+
+    
 </body>
 </html>
